force-app/main/default/objects/Comment__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the field which will populate the name of the user who writes the comment.</description>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>