force-app/main/default/objects/Comment__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>This is the comment field.</description>
    <label>Body</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>