force-app/main/default/objects/Comment__c/fields/Task_Item__c.field-meta.xml
<CustomField>
    <fullName>Task_Item__c</fullName>
    <label>Task Item</label>
    <referenceTo>Task_Item__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>